--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.7.6
+click==4.0
 Flask==0.10.1
 Flask-Migrate==1.4.0
 Flask-Script==2.0.5
@@ -8,6 +9,15 @@ itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
+numpy==1.9.2
+pandas==0.16.0
 psycopg2==2.6
+python-dateutil==2.4.2
+pytz==2015.2
+redis==2.10.3
+rq==0.5.2
+scikit-learn==0.16.1
+scipy==0.15.1
+six==1.9.0
 SQLAlchemy==1.0.4
 Werkzeug==0.10.4
